syntax = 'proto3';
import "common.proto";

package user;

option go_package = "/services";

service UserService {
  rpc EmailExists (EmailRequest) returns (EmailExistsResponse);
  rpc GetByEmail (EmailRequest) returns (UserResponse);
  rpc GetById ( common.IdRequest) returns (UserResponse);
  rpc CheckPassword ( CheckPasswordRequest) returns (UserResponse);
}

message EmailRequest {
  string email = 1;
}

message EmailExistsResponse {
  bool exists = 1;
}

message CheckPasswordRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
}
